Fixed a bug with parsers and got unit tests to pass again.

--- a/Asset Spec/sdg.unturned.configdata, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.configdata, assembly-csharp.json
@@ -278,7 +278,7 @@
                         "ElementType": "SDG.Unturned.BrowserConfigData+Link, Assembly-CSharp"
                     },
                     "Description": "Buttons shown in the server lobby menu.",
-                    "DefaultValue": null
+                    "DefaultValue": [ ]
                 }
             ]
         },
