--- a/Asset Spec/sdg.unturned.itemconsumeableasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.itemconsumeableasset, assembly-csharp.json
@@ -194,7 +194,7 @@
                 "ElementType": "SDG.Unturned.INPCReward, Assembly-CSharp",
                 "Mode": "LegacyList, ModernList"
             },
-            "DefaultValue": null,
+            "DefaultValue": [ ],
             "Description": "Rewards applied when consuming this item.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/consumeable-asset.html#rewards",
             "Variable": "questRewardsList"
