--- a/Asset Spec/sdg.unturned.itemplaceableasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.itemplaceableasset, assembly-csharp.json
@@ -166,7 +166,7 @@
                     "AssetType": "SDG.Unturned.TagAsset, Assembly-CSharp"
                 }
             },
-            "DefaultValue": null,
+            "DefaultValue": [ ],
             "Description": "List of crafting tags to provide to nearby players when this item is placed.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/placeable-asset.html#placeable-asset-properties",
             "Variable": "PlaceableProvidedCraftingTags"
