--- a/Asset Spec/sdg.unturned.dialogueasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.dialogueasset, assembly-csharp.json
@@ -97,7 +97,7 @@
                         "AssetType": "SDG.Unturned.DialogueAsset, Assembly-CSharp"
                     },
                     "DefaultValue": "00000000-0000-0000-0000-000000000000",
-                    "Description": "The GUID or short ID of the previous dialogue page of message #(Self.TemplateGroups[0]). The player will be returned to this dialogue if no responses are available.",
+                    "Description": "The GUID or short ID of the previous dialogue page of message #(Self.Indices[0]). The player will be returned to this dialogue if no responses are available.",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#messages",
                     "Variable": "prevGuid"
                 },
@@ -105,7 +105,7 @@
                     "Key": "FaceOverride",
                     "Type": "FaceIndex",
                     "DefaultValue": null,
-                    "Description": "The index of an overridden face image to use during message #(Self.TemplateGroups[0]).",
+                    "Description": "The index of an overridden face image to use during message #(Self.Indices[0]).",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#messages",
                     "Variable": "faceOverride"
                 },
@@ -118,7 +118,7 @@
                         "Mode": "LegacyList, ModernList"
                     },
                     "DefaultValue": [ ],
-                    "Description": "Conditions that must be met for message #(Self.TemplateGroups[0]) to be shown.",
+                    "Description": "Conditions that must be met for message #(Self.Indices[0]) to be shown.",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/conditions.html",
                     "Variable": "conditions"
                 },
@@ -131,7 +131,7 @@
                         "Mode": "LegacyList, ModernList"
                     },
                     "DefaultValue": [ ],
-                    "Description": "Rewards applied before viewing message #(Self.TemplateGroups[0]).",
+                    "Description": "Rewards applied before viewing message #(Self.Indices[0]).",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/rewards.html",
                     "Variable": "rewards"
                 }
@@ -206,7 +206,7 @@
                         "Mode": "LegacyList, ModernList"
                     },
                     "DefaultValue": [ ],
-                    "Description": "Conditions that must be met for response #(Self.TemplateGroups[0]) to be shown.",
+                    "Description": "Conditions that must be met for response #(Self.Indices[0]) to be shown.",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/conditions.html",
                     "Variable": "conditions"
                 },
@@ -219,7 +219,7 @@
                         "Mode": "LegacyList, ModernList"
                     },
                     "DefaultValue": [ ],
-                    "Description": "Rewards applied before viewing response #(Self.TemplateGroups[0]).",
+                    "Description": "Rewards applied before viewing response #(Self.Indices[0]).",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/rewards.html",
                     "Variable": "rewards"
                 }
@@ -236,7 +236,7 @@
                         "ExtraTags": [ "<name_npc>", "<name_char>" ]
                     },
                     "Required": true,
-                    "Description": "The text shown for response #(Self.TemplateGroups[0]).",
+                    "Description": "The text shown for response #(Self.Indices[0]).",
                     "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#localization",
                     "Variable": "text"
                 }
