--- a/Asset Spec/sdg.unturned.resourceasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.resourceasset, assembly-csharp.json
@@ -70,7 +70,7 @@
                 {
                     "Case":
                     {
-                        "Variable": "#Scale.Included{RequireValue=true}",
+                        "Variable": "#Scale.Included{\"RequireValue\":true}",
                         "Operation": "eq",
                         "Comparand": true
                     },
@@ -103,7 +103,7 @@
                 {
                     "Case":
                     {
-                        "Variable": "#Scale.Included{RequireValue=true}",
+                        "Variable": "#Scale.Included{\"RequireValue\":true}",
                         "Operation": "eq",
                         "Comparand": true
                     },
