Fixed data-refs in expressions and cleaned up some cache code.

--- a/UnturnedAssetSpecTests/UnturnedAssetSpecTests.csproj
+++ b/UnturnedAssetSpecTests/UnturnedAssetSpecTests.csproj
@@ -20,6 +20,7 @@
     <StrongNameKeyPath>C:\Strong Name Keys\UnturnedAssetSpec\UnturnedAssetSpec_Tests.dll.snk</StrongNameKeyPath>
     <TestLsp>False</TestLsp>
     <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net9.0'">
